--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
@@ -53,7 +53,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t2.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT2} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT2} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -131,7 +131,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t3.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT3} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT3} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -208,7 +208,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t4.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT4} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT4} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -286,7 +286,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t5.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT5} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT5} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -363,7 +363,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t6.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT6} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT6} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -440,7 +440,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t7.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT7} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT7} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -517,7 +517,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t8.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT8} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT8} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -594,7 +594,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t9.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT9} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT9} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -671,7 +671,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t3.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT10} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT10} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
