--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
@@ -1,7 +1,7 @@
 \includegraphics[scale=0.7]{Poli.eps}
 
 \begin{center}
-\large{Título}\\
+\large{Estimação do valor do preço de mercado da energia elétrica através de modelos não-lineares}\\
    \vspace{2cm}
 \large{Felipe Claudio da Silva Santos}\\
 \end{center}
@@ -81,7 +81,7 @@ Examinador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Examinador 1}
+            \centering{Flávio Luis de Mello}
 
             \vspace{0.1cm}
          }
@@ -94,7 +94,7 @@ Examinador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Examinador 2}
+            \centering{Carlous Jourdan Gadelha Vieira}
 
             \vspace{0.1cm}
          }
