--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,20 +1,23 @@
-\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1196) e a CERJ(20/11//1996) \cite{EvolucaoSetorEletrico}.
+\paragraph{}Este capítulo tem como objetivo introduzir o leitor à estrutura do setor elétrico brasileiro, assim como expor os maiores desafios enfrentados. Também será apresentado e detalhado o problema a ser resolvido nesse projeto.
+
+\section{Histórico do Setor Elétrico Brasileiro}
+\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1996) e a CERJ(20/11//1996) \cite{EvolucaoSetorEletrico}.
 
 \paragraph{}Assim como mencionado, um dos pilares do RE-SEB foi a regulamentação. Então em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tinha como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
 
 \paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores
 \cite{EvolucaoSetorEletrico}. Além disso, foi dado livre acesso aos pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW)  ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico. Isto facilitou o aparecimento de novas fontes de energias e novos produtores no SEB.
 
-\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do sistema. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir \cite{CCEE}:
+\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB, buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do mesmo. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir \cite{CCEE}:
 
 \begin{itemize}
 	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico.}
 	
-	\item{\textbf{Comitê de Monitoramento do Setor Elétrico - CMSE}: Acompanha e avalia a continuidade e a segurança do suprimento elétrico em todo o território nacional}
+	\item{\textbf{Comitê de Monitoramento do Setor Elétrico - CMSE}: Acompanha e avalia a continuidade e segurança do suprimento elétrico em todo o território nacional}
 	
 	\item{\textbf{Conselho Nacional de Política Energética - CNPE}: Formula políticas e diretrizes de energia que garantam o suprimento de energia elétrica para todo o país}
 	
-	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula, e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.}
+	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.}
 	
 	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: Atua desde a medição de energia gerada e efetivamente consumida até a liquidação financeira dos contratos de compra e venda no curto prazo \cite{CCEE}. Anteriormente se chamava Mercado Atacadista de Energia - MAE.}
 	
@@ -25,7 +28,7 @@
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\linewidth]{orgaos_governo.jpg}
-		\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE}.}}
+		\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE}.}}
 	\end{figure}
 \end{itemize} 
 
@@ -59,7 +62,7 @@
 				
 				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
 				
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{ONS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{ONS}}}
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{ONS}}}
 				
 			\end{center}
 			
@@ -75,7 +78,7 @@
 	
 	\begin{center}
 		
-		\caption{Critérios vigentes para se tor consumidor Livre \cite{CCEE}.}
+		\caption{Critérios vigentes para se tornar consumidor Livre.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -113,7 +116,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 				
 				\includegraphics[scale=0.475]{decisao.jpg}
 				
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{PrevisaoMultiPassos} }]{\label{Decisao} \small{Planejamento da produção de energia do sistema hidrotérmico\cite{PrevisaoMultiPassos}}}
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 }]{\label{Decisao} \small{Planejamento da produção de energia do sistema hidrotérmico\cite{PrevisaoMultiPassos}}}
 				
 			\end{center}
 			
@@ -133,13 +136,13 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{matrizEletrica_mundo.png}
-		\caption[\small{Matriz Elétrica Mundial \cite{EPE}.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{EPE}.}}
+		\caption[\small{Matriz Elétrica Mundial.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{EPE}.}}
 		
 	\end{subfigure}\hfill
 	\begin{subfigure}{.48\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{matrizEletrica_brasil.png}
-		\caption[\small{Matriz Elétrica Mundial \cite{EPE}.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{EPE}.}}
+		\caption[\small{Matriz Elétrica Mundial.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{EPE}.}}
 	\end{subfigure}
 	\caption{Comparação entre a matriz elétrica mundial e a brasileira}
 	\label{fig:MatrizEletricaComparacao}
@@ -152,7 +155,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{PLD_media_mensal_SE.jpg}
-	\caption[\small{Instituições do setor elétrico brasileiro \cite{CCEE}.}]{\label{PLDMensal} \small{PLD mensal. Fonte: CCEE \cite{CCEE}.}}
+	\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{PLDMensal} \small{PLD mensal. Fonte: CCEE \cite{CCEE}.}}
 \end{figure}
 
 \paragraph{}No gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
@@ -170,7 +173,7 @@ PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano
 
 	\begin{center}
 
-		\caption{Variáveis utilizadas no cálculo do PLD semanal \cite{CCEE}.}
+		\caption{Variáveis utilizadas no cálculo do PLD semanal.}
 
 		\begin{tabular}{|c|c|}\hline
 
@@ -199,7 +202,7 @@ O valores de definidos para os últimos 5 anos foram:
 	
 	\begin{center}
 		
-		\caption{Preço mínimo e máximo do PLD \cite{CCEE}.}
+		\caption{Preço mínimo e máximo do PLD.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -230,7 +233,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	
 	\begin{center}
 		
-		\caption{Arquivos de entrada do DECOMP \cite{CCEE}.}
+		\caption{Arquivos de entrada do DECOMP.}
 		
 		\begin{tabular}{|c|c|}\hline
 			
@@ -264,14 +267,14 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{esquematico_previsao_indireta_pld_ufop_tcc.jpg}
-		\caption[\small{Esquematico previsão indireta do PLD \cite{TCC_PLD}.}]
+		\caption[\small{Esquematico previsão indireta do PLD.}]
 		{\label{EsquematicoPrevisaoIndiretaPLDUFOP} \small{Esquematico previsão indireta PLD\cite{TCC_PLD}.}}
 		
 	\end{subfigure}\hfill
 	\begin{subfigure}{.48\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{previsao_indireta_pld_ufop_tcc.jpg}
-		\caption[\small{Previsão indireta do PLD \cite{TCC_PLD}.}]
+		\caption[\small{Previsão indireta do PLD.}]
 		{\label{PrevisaoIndiretaPLDUFOP} \small{Previsão indireta do PLD \cite{TCC_PLD}.}}	
 	\end{subfigure}\hfill
 	\caption{Previsão indireta do PLD}
@@ -283,13 +286,13 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{esquematico_previsao_direta_pld_ufop_tcc.jpg}
-		\caption[\small{Esquematico previsão indireta do PLD \cite{TCC_PLD}.}]
+		\caption[\small{Esquematico previsão indireta do PLD.}]
 		{\label{EsquematicoPrevisaoDiretaPLDUFOP} \small{Esquematico previsão direta do PLD\cite{TCC_PLD}.}}
 	\end{subfigure}
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{previsao_direta_pld_ufop_tcc.jpg}
-		\caption[\small{Previsão direta do PLD \cite{}.}]
+		\caption[\small{Previsão direta do PLD.}]
 {\label{PrevisaoDiretaPLDUFOP} \small{Previsão direta PLD\cite{TCC_PLD}.}}
 	\end{subfigure}
 	\caption{Previsão direta do PLD}
@@ -303,13 +306,13 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{hibrido_tese_PLD.jpg}
-		\caption[\small{Esquematico previsão indireta do PLD \cite{PrevisaoMultiPassos}.}]
+		\caption[\small{Esquematico previsão indireta do PLD.}]
 		{\label{HibridoTesePLD} \small{Esquematico modelo híbdrido de previsão do PLD. \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
 	\begin{subfigure}{.4659\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{resultado_tese_previsao_PLD_se_co.jpg}
-		\caption[\small{Resultado da previsão do modelo híbrido \cite{PrevisaoMultiPassos}.}]
+		\caption[\small{Resultado da previsão do modelo híbrido.}]
 		{\label{ResultadoHibridoTesePLD} \small{Resultado da previsão do modelo híbrido. \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
 	\caption{Previsão do PLD utilizando o modelo híbrido}
@@ -323,16 +326,16 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{divisoes_previsao_tese.jpg}
-		\caption[\small{Classes de saída do algorítmo\cite{PrevisaoMultiPassos}.}]
+		\caption[\small{Classes de saída do algorítmo.}]
 		{\label{ClassesPrevisao} \small{Classes de saída do algorítmo \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
 	\begin{subfigure}{.6\textheight}
 		\centering
 		\includegraphics[width=1\linewidth]{resultado_classificador_tese_previsao.jpg}
-		\caption[\small{Matriz de confusão \cite{PrevisaoMultiPassos}.}]
+		\caption[\small{Matriz de confusão.}]
 		{\label{ResultadoClassificadorTesePLD} \small{Matriz de confusão \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
-	\caption{Previsão do PLD utilizando o modelo híbrido}
+	\caption{Previsão do PLD utilizando o modelo com árvore de classificação}
 	\label{fig:ResultadoPrevisaoMultiPassosClassificador}		
 \end{figure}
 
@@ -347,7 +350,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{PSF_forecast.jpg}
-	\caption[\small{Instituições do setor elétrico brasileiro \cite{PSF_forecast}.}]{\label{PSF_forecast} \small{Utilização do algoritmo PSF para previsão de séries temporais \cite{PSF_forecast}.}}
+	\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{PSF_forecast} \small{Utilização do algoritmo PSF para previsão de séries temporais \cite{PSF_forecast}.}}
 \end{figure}
 
 \paragraph{}Em \cite{simple_forecast} são mostradas algumas abordagens simples para o problema de previsão do preço \textit{spot} (PLD é um exemplo de preço \textit{spot}) no mercado de energia de Ontário. Foi utilizada uma rede neural com uma camada escondida, uma rede neural misturada com lógica fuzzy e otimização com o algoritmo IMO. A previsão foi feita hora a hora para um período de 24 horas. Concluiu-se que a rede neural com lógica fuzzy obteve o melhor resultado, além disso a relevância das entradas para a previsão foi analisada e viu-se que as entradas mais relevantes eram a demanda e a interrupção do gerador. 
