--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap5.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap5.tex
@@ -246,7 +246,7 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t0.jpg}
 				
-				\caption[\small{Sinal comple.}]{\label{completoT0} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Sinal completo.}]{\label{completoT0} \small{Sinal completo.}}
 				
 			\end{center}
 		}	
@@ -314,7 +314,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t1.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT1} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT1} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
@@ -393,7 +393,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t1_error.jpg}
 				
-				\caption[\small{Erro pelo número de época e por fold.}]{\label{convT1erro} \small{Erro pelo número de época e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT1erro} \small{Erro pelo número de épocas e por fold.}}
 				
 			\end{center}
 		}	
